add ruian-client project

--- a/scb-ui-zk/.settings/org.eclipse.wst.common.component
+++ b/scb-ui-zk/.settings/org.eclipse.wst.common.component
@@ -16,6 +16,9 @@
         <dependent-module archiveName="webtools-logging-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/webtools-logging/webtools-logging">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="ruian-client-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ruian-client/ruian-client">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="scb-ui-zk"/>
         <property name="java-output-path" value="/scb-ui-zk/target/classes"/>
     </wb-module>
