--- a/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
@@ -12,14 +12,32 @@
 		validationMessages="@id('vmsgs')" >
 		<groupbox width="100%" style="margin-top:20px;" >
 			<caption hflex="1">
-			    <label value="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"/>
+			    <hlayout hflex="1">
+					<label value="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"/>
+				    <hbox pack="end" align="center" hflex="1" style="margin-right: 10px;">
+						<label visible="@load(vm.validationResponse.valid)" 
+							value="Ověřeno" 
+							style="background-color: #EFF7E8 !important; color: #78C128; border-color: #78C128 !important; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />
+						<label visible="@load(!empty(vm.validationResponse) and !vm.validationResponse.valid)" 
+							value="Neplatná" 
+							style="background-color: #FFEAEC !important; color: #FF4051; border-color: #FF4051 !important; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />									
+						<label visible="@load(empty(vm.validationResponse))" 
+							value="Neověřeno" 
+							style="background-color: #FFF3E7 !important; color: #FF8501; border-color: #FF8501 !important; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />		
+					</hbox>
+			    </hlayout>
 			</caption>
             <grid sclass="scb-form-grid-2" hflex="1">
 				<rows>
 					<row>
 						<cell>
 							<vbox hflex="1">
-								<label value="Kraj"/>
+								<hlayout hflex="1">
+									<label value="Kraj"/>
+									<hbox hflex="1" pack="end" xmlns:x="xhtml" style="padding-left: 5px; padding-right: 12px; height: 26px;">
+										<x:i class="z-icon-check-circle" visible="@load(!empty(vm.regionSelected))" style="color: green;" />
+									</hbox>
+								</hlayout>
 								<!-- Region -->
 								<combobox id="region" 
 									model="@load(vm.regionList)"
@@ -46,19 +64,25 @@
 					<row>
 						<cell sclass="form-grid-cell">
 							<vbox hflex="1">
-								<label value="${c:l('txt.ui.common.city')}"/>
+								<hlayout hflex="1">
+									<label value="${c:l('txt.ui.common.city')}"/>
+									<hbox hflex="1" pack="end" xmlns:x="xhtml" style="padding-left: 5px; padding-right: 12px; height: 26px;">
+										<x:i class="z-icon-check-circle" visible="@load(!empty(vm.municipalitySelected))" style="color: green;" />
+									</hbox>
+								</hlayout>
 								<!-- Mesto -->
 								<combobox id="city" 
-									model="@load(vm.municipalityList)"
-									onSelect="@command('municipaltitySelectCmd')"
-									selectedItem="@bind(vm.municipalitySelected)"
+									model="@load(vm.municipalityListModel)"
+									selectedItem="@bind(vm.municipalityNameSelected)"
+									onBlur="@command('municipaltitySelectCmd')"
+									autodrop="true"
 									placeholder="*"
 									style="background: white;"
 									tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 									maxlength="240"
 									hflex="1" >
 									<template name="model">
-						            	<comboitem label="@bind(each.municipalityName)"/>
+						            	<comboitem label="${each}"/>
 									</template>
 								</combobox>
 								<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -72,17 +96,23 @@
 					<row>
 						<cell sclass="form-grid-cell">
 							<vbox hflex="1">
-								<label value="${c:l('txt.ui.common.street')}"/>
+								<hlayout hflex="1">
+									<label value="${c:l('txt.ui.common.street')}"/>
+									<hbox hflex="1" pack="end" xmlns:x="xhtml" style="padding-left: 5px; padding-right: 12px; height: 26px;">
+										<x:i class="z-icon-check-circle" visible="@load(!empty(vm.streetSelected))" style="color: green;)" />
+									</hbox>
+								</hlayout>
 								<!-- Ulice -->
 								<combobox id="street"
-									model="@load(vm.streetList)"
-									onSelect="@command('streetSelectCmd')"
-									selectedItem="@bind(vm.streetSelected)"
+									model="@load(vm.streetListModel)"
+									onBlur="@command('streetSelectCmd')"
+									autodrop="true"
+									selectedItem="@bind(vm.streetNameSelected)"
 									placeholder="Ulice"
 									style="background: white;"
 									hflex="1" >
 									<template name="model">
-						            	<comboitem label="${each.streetName}"/>
+						            	<comboitem label="${each}"/>
 									</template>
 								</combobox>
 							</vbox>
@@ -146,11 +176,10 @@
 					</row>
 					<row>
 						<cell sclass="form-grid-cell">
-							<hbox hflex="1">
+							<hlayout hflex="1">
 								<button label="Fill region list" onClick="@command('getRegionListCmd')" />
 								<button label="Ověřit" onClick="@command('placeValidationCmd')" />
-								<label value="@load(vm.validationResponse.valid)"></label>					
-							</hbox>
+							</hlayout>
 						</cell>
 					</row>
 				</rows>
