--- a/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
@@ -14,13 +14,13 @@
 			<caption label="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"
 				 width="100%" sclass="customPosition"  >
 				<label visible="@load(vm.validationResponse.valid)" 
-					value="Platná" 
+					value="${c:l('msg.ui.address.valid')}" 
 					style="margin-top: 10px; background-color: #EFF7E8 !important; color: #78C128; border: 1px solid #78C128; border-color: #78C128 !important; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />
 				<label visible="@load(!empty(vm.validationResponse) and !vm.validationResponse.valid)" 
-					value="Neplatná" 
+					value="${c:l('msg.ui.address.invalid')}" 
 					style="margin-top: 10px; background-color: #FFEAEC !important; color: #FF4051; border: 1px solid #FF4051; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />									
 				<label visible="@load(empty(vm.validationResponse))"
-					value="Neověřená" 
+					value="${c:l('msg.ui.address.notVerified')}" 
 					style="margin-top: 10px; background-color: #FFF3E7 !important; color: #FF8501; border: 1px solid #FF8501; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />
 			</caption>
             <grid sclass="scb-form-grid-2" hflex="1">
@@ -29,7 +29,7 @@
 						<cell>
 							<vbox hflex="1">
 								<hlayout hflex="1">
-									<label value="Kraj"/>
+									<label value="${c:l('msg.ui.address.Region')}"/>
 									<hbox hflex="1" pack="end" xmlns:x="xhtml" style="padding-left: 5px; padding-right: 12px; height: 26px;">
 										<x:i class="z-icon-check-circle" visible="@load(!empty(vm.regionSelected))" style="color: green;" />
 									</hbox>
@@ -141,7 +141,7 @@
 										hflex="1" />
 								</vbox>
 								<vbox hflex="1">
-									<label value="Číslo evidenční"/>
+									<label value="${c:l('msg.ui.address.EvNo')}"/>
 									<textbox id="ce"
 										value="@bind(vm.ce)"
 										onChange="@command('addressItemChangedCmd')"
@@ -176,7 +176,7 @@
 						<cell sclass="form-grid-cell">
 							<hlayout hflex="1">
 								<button label="Fill region list" onClick="@command('getRegionListCmd')" />
-								<button label="Ověřit" onClick="@command('placeValidationCmd')" />
+								<button label="${c:l('msg.ui.address.Verify')}" onClick="@command('placeValidationCmd')" />
 							</hlayout>
 						</cell>
 					</row>
