--- a/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
@@ -8,10 +8,15 @@
 	<script type="text/javascript" src='https://www.google.com/recaptcha/api.js' defer="true" />
 	<custom-attributes placeValidationCmd="placeValidationCmd" />
 	
-	<div self="@{define(mainContent)}" hflex="1" 
-		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.AddressVM')"
-		validationMessages="@id('vmsgs')" >
-		<groupbox width="100%" style="margin-top:20px;" >
+	<div self="@{define(mainContent)}"
+		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.AddressDemoVM')"
+		hflex="1" >
+		
+		<custom-attributes contact="${vm.contact}" />
+		
+		<groupbox width="100%" style="margin-top:20px;"
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.AddressVM', contact=contact)"
+			validationMessages="@id('vmsgs')" >
 			<caption label="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"
 				 width="100%" sclass="customPosition"  >
 				<label visible="@load(vm.validationResponse.valid)" 
@@ -123,18 +128,12 @@
 								<vbox hflex="1">
 									<label value="${c:l('txt.ui.common.landRegNo')}"/>
 									<intbox id="cp"
-										value="@bind(vm.cp) @save(vm.cp, before={placeValidationCmd}) @validator(vm.notNullObjectValidator)"
+										value="@bind(vm.cp)"
 										onChange="@command('addressItemChangedCmd')"
 										maxlength="8"
-										placeholder="*"
 										sclass="form-input-text"
 										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 										hflex="1" />
-									<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-										<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[cp])" >
-											<label value="@bind(vmsgs[cp])" />
-										</span>
-									</hbox>
 								</vbox>
 								<vbox hflex="1">
 									<label value="${c:l('txt.ui.common.houseNo')}"/>
@@ -180,7 +179,7 @@
 					<row>
 						<cell sclass="form-grid-cell">
 							<hlayout hflex="1">
-								<button label="${c:l('msg.ui.address.Verify')}" onClick="@command(placeValidationCmd)" />
+								<button label="${c:l('msg.ui.address.Verify')}" onClick="@command(placeValidationCmd)" visible="@load(!vm.validationResponse.valid)" />
 							</hlayout>
 						</cell>
 					</row>
