ruian-client, set closable false

--- a/scb-ui-zk/src/main/webapp/pages/common/component/ruian-address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/ruian-address.zul
@@ -3,6 +3,7 @@
 	<custom-attributes contact="${arg.contact}" />
 	
 	<groupbox width="100%" style="margin-top:20px;"
+		closable="false"
 		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.AddressVM', contact=contact)"
 		validationMessages="@id('vmsgs')" >
 		<caption label="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"
