ruian-client, address editable

--- a/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/address.zul
@@ -14,7 +14,7 @@
 		
 		<button onClick="@command('submitCmd')" label="Submit" />
 		
-		<ruian-address contact="${vm.contact}" />
+		<ruian-address contact="${vm.contact}" contactDisabled="false" />
 		
 	</div>
 </zk>
